# libazure-storage-client

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  azure-storage-client.pc.in  configure.ac
.github/: FUNDING.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
include/libazure-storage-client/: azure-storage-client.hpp
specs/001-autotools-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-autotools-scaffold/checklists/: requirements.md
specs/002-auth-and-create-table/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-and-create-table/checklists/: requirements.md
specs/002-auth-and-create-table/contracts/: public-api.md
specs/003-sync-crud-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sync-crud-operations/checklists/: requirements.md
specs/003-sync-crud-operations/contracts/: public-api.md
specs/004-async-crud-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-async-crud-operations/checklists/: requirements.md
specs/004-async-crud-operations/contracts/: public-api.md
specs/005-tests-readme-license/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-tests-readme-license/checklists/: requirements.md
specs/005-tests-readme-license/contracts/: public-api.md
src/: Makefile.am  azure-storage-client.cpp
tests/: Makefile.am  test_azure_table_client.cpp
